--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
@@ -12,7 +13,7 @@
         <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <nav>
             <ul class="header-nav">
-                <li><a class="link" href="">Студия</a></li>
+                <li><a class="link link-current" href="./index.html">Студия</a></li>
                 <li><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
