--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Портфолио</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -12,8 +13,8 @@
         <a href="./index.html" class="logo"><span>Web</span>Studio</a>
         <nav>
             <ul class="header-nav">
-                <li><a class="link" href="">Студия</a></li>
-                <li><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li><a class="link" href="./index.html">Студия</a></li>
+                <li><a class="link link-current" href="./portfolio.html">Портфолио</a></li>
                 <li><a class="link" href="">Контакты</a></li>
             </ul>
         </nav>
@@ -23,63 +24,78 @@
         </ul>
     </header>
     <main>
-        <section class="filters">
+        <section class="our-portfolio">
             <h1 class="hide">Портфолио</h1>
-            <ul>
+            <ul class="filters">
                 <li><button type="button" class="button">Все</button></li>
                 <li><button type="button" class="button">Веб-сайты</button></li>
                 <li><button type="button" class="button">Приложения</button></li>
                 <li><button type="button" class="button">Дизайн</button></li>
                 <li><button type="button" class="button">Маркетинг</button></li>
             </ul>
-        </section>
-        <section>
-            <h2 class="hide">Примеры наших работ</h2>
-            <ul>
+            <ul class="portfolio-list">
                 <li>
-                    <img src="./image/portfolio-example-1.jpg" width="370" alt="сайт в ноутбуке">
-                    <h3 class="text-h3">Технокряк</h3>
-                    <p class="text">Веб-сайт</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-1.jpg" width="370" alt="сайт в ноутбуке">
+                        <h3 class="text-h3">Технокряк</h3>
+                        <p class="text">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-2.jpg" width="370" alt="спорт баскетбол">
-                    <h3 class="text-h3">Постер New Orlean vs Golden Star</h3>
-                    <p class="text">Дизайн</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-2.jpg" width="370" alt="спорт баскетбол">
+                        <h3 class="text-h3">Постер New Orlean vs Golden Star</h3>
+                        <p class="text">Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-3.jpg" width="370" alt="этикетка бренда">
-                    <h3 class="text-h3">Ресторан Seafood</h3>
-                    <p class="text">Приложение</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-3.jpg" width="370" alt="этикетка бренда">
+                        <h3 class="text-h3">Ресторан Seafood</h3>
+                        <p class="text">Приложение</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-4.jpg" width="370" alt="наушники">
-                    <h3 class="text-h3">Проект Prime</h3>
-                    <p class="text">Маркетинг</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-4.jpg" width="370" alt="наушники">
+                        <h3 class="text-h3">Проект Prime</h3>
+                        <p class="text">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-5.jpg" width="370" alt="брендированные коробки">
-                    <h3 class="text-h3">Проект Boxes</h3>
-                    <p class="text">Приложение</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-5.jpg" width="370" alt="брендированные коробки">
+                        <h3 class="text-h3">Проект Boxes</h3>
+                        <p class="text">Приложение</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-6.jpg" width="370" alt="сайт в мониторе">
-                    <h3 class="text-h3">Inspiration has no Borders</h3>
-                    <p class="text">Веб-сайт</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-6.jpg" width="370" alt="сайт в мониторе">
+                        <h3 class="text-h3">Inspiration has no Borders</h3>
+                        <p class="text">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-7.jpg" width="370" alt="разворот книги">
-                    <h3 class="text-h3">Издание Limited Edition</h3>
-                    <p class="text">Дизайн</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-7.jpg" width="370" alt="разворот книги">
+                        <h3 class="text-h3">Издание Limited Edition</h3>
+                        <p class="text">Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-8.jpg" width="370" alt="этикетка бренда">
-                    <h3 class="text-h3">Проект LAB</h3>
-                    <p class="text">Маркетинг</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-8.jpg" width="370" alt="этикетка бренда">
+                        <h3 class="text-h3">Проект LAB</h3>
+                        <p class="text">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="./image/portfolio-example-9.jpg" width="370" alt="робочее место с ноутбуком">
-                    <h3 class="text-h3">Growing Business</h3>
-                    <p class="text">Приложение</p>
+                    <a href="" class="link">
+                        <img src="./image/portfolio-example-9.jpg" width="370" alt="робочее место с ноутбуком">
+                        <h3 class="text-h3">Growing Business</h3>
+                        <p class="text">Приложение</p>
+                    </a>
                 </li>
             </ul>
         </section>
